# TastyPorject

./: CMakeLists.txt  gtk.c  tasty.c  tasty.html  test.c  testy.css
